--- a/package.json
+++ b/package.json
@@ -64,5 +64,6 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^18.0.0",
     "typescript": "~5.4.2"
-  }
+  },
+  "packageManager": "yarn@4.5.2"
 }
