--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
       - name: run
         run: yarn run test
 
-      - uses: codecov/codecov-action@v4
+      - uses: codecov/codecov-action@v5
         name: upload
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
@@ -67,11 +67,11 @@ jobs:
       - name: build
         run: |
           node ./node_modules/@angular/cli/bin/ng build --base-href /ngx-filesaver/
-          cp ./dist/browser/index.html ./dist/browser/404.html
-          ls ./dist/browser
+          cp ./dist/ngx-filesaver/browser/index.html ./dist/ngx-filesaver/browser/404.html
+          ls ./dist/ngx-filesaver/browser
 
       - name: deploy-to-gh-pages
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist/browser
+          publish_dir: ./dist/ngx-filesaver/browser
