--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "baseUrl": ".",
     "paths": {
       "ngx-filesaver": [
-        "./publish"
+        "./lib/src/public-api"
       ]
     }
   },
